# hydration-narc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  START_HERE.md  actions.py  camera_pick.py  ledger.py  main.py  menubar.py  narc.py  pyproject.toml  settings_store.py  shame_report.py  shared_state.py  start.sh  stop.sh  summary.txt  trackpad_witness.py
.github/workflows/: ci.yml
media/: narc.icns
site/: package.json
site/app/: globals.css  layout.tsx  page.tsx
site/app/components/narc/: Nav.tsx
sounds/: README.txt
tests/: test_license.py
trailer/: package-lock.json  package.json  tsconfig.json
trailer/public/: logic.aiff  outro.aiff  threat.aiff
trailer/src/: NarcTrailer.tsx  Root.tsx  constants.ts
trailer/src/components/: CTAScene.tsx  HealthBar.tsx  NuclearScene.tsx  SinRegistry.tsx  TitleCard.tsx
trailer/voiceover/: intro.aiff
